--- a/pwc.html
+++ b/pwc.html
@@ -84,6 +84,7 @@
         background-color: #ece9e9;
         box-shadow: 2px 2px 5px #c2bebe;
         margin-left: 10px;
+        margin-top: 14px;
     }
 
     #l1:hover{
@@ -129,6 +130,7 @@
         float: right;/**/
         /*margin-left: 30em;*/
         border-collapse: collapse;
+        margin-top: 10px;
     }
 
     .switch {
@@ -255,7 +257,7 @@
     </div>
     <div class="container">
         <div class="leftpane">
-            <div class="inleft" id="l1" style="margin-top: 8px;">
+            <div class="inleft" id="l1" style="margin-top: 10px; height: 17%;" >
                 <form id="form1" class="form">
                     <label>
                         <span class="parameter">
@@ -287,7 +289,6 @@
                     </label>
                 </form>
             </div>
-            <br>
             <div class="inleft" id="l2">
                 <form id="form2" class="form">
                     <label>
@@ -324,8 +325,7 @@
                     </label>
                 </form>
             </div>
-            <br>
-            <div class="inleft" id="l3">
+            <div class="inleft" id="l3" style="height: 17%">
                 <form id="form3" class="form">
                     <label>
                         <span class="parameter">
@@ -357,7 +357,6 @@
                     </label>
                 </form>
             </div>
-            <br>
             <div class="inleft" id="l4">
                 <form id="form4" class="form">
                     <label>
@@ -390,7 +389,6 @@
                     </label>
                 </form>
             </div>
-            <br>
             <div class="inleft" id="l5">
                 <form id="form5" class="form">
                     <label>
@@ -424,7 +422,6 @@
                 </form>
             </div>
         </div>
-        <br>
         <div class="rightpane" id="plot"></div>
     </div>
 
