--- a/pwc.html
+++ b/pwc.html
@@ -127,7 +127,7 @@
         width: 50em;
         height: 35em;
         position: relative;
-        float: right;/**/
+        float: left;/**/
         /*margin-left: 30em;*/
         border-collapse: collapse;
         margin-top: 10px;
