seperated css and js

--- a/pwc.html
+++ b/pwc.html
@@ -1,256 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>
+        Pick Weights Calibrator
+    </title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Pick Weights Calibrator</title>
-    <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
-</script>
-</head>
-<style>
-    body,html{
-        height: 100%;
-        width: 100%;
-        margin: 0;
-    }
-
-    .heading{
-        text-align: center;
-        font-family: 'Karla', sans-serif;
-        font-size: 170%;
-        padding: 8px;
-        font-weight: bold;
-        color: whitesmoke;
-        position: relative;
-        background-color: rgb(45, 8, 179);
-        box-shadow: 0px 3px 6px #757373;
-    }
-
-    .enable{
-        margin-left: 3px; 
-        font-family: 'Montserrat',sans-serif;
-        font-size: 90%;
-    }
-
-    .freeze{
-        margin-left: 3px; 
-        font-family: 'Montserrat',sans-serif;
-        font-size: 90%;
-    }
-
-    .parameter{
-        font-family: 'Montserrat',sans-serif;
-        font-size: 120%;
-        color: rgb(90, 33, 143);
-        font-weight: bold;
-    }
-
-    .equation{
-        font-size: 170%;
-    }
-
-    .weight{
-        font-weight: bold;
-        font-size: 120%;
-        font-family: 'Montserrat',sans-serif;
-    }
-
-    .variable{
-        font-weight: bold;
-        font-size: 120%;
-        font-family: 'Montserrat',sans-serif;
-        margin-left: 5px;
-    }
-
-    .container{
-        width: 100%;
-        height: 35em
-    }
-
-    .leftpane{
-        width: 29em;
-        height: 36em;
-        float: left;
-        position: relative;
-    }
-
-    .inleft{
-        width: 95%;
-        height: 16%;
-        padding-top: 6px;
-        padding-left: 6px;
-        background-color: #ece9e9;
-        box-shadow: 2px 2px 5px #c2bebe;
-        margin-left: 10px;
-        margin-top: 14px;
-    }
-
-    #l1:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(0, 128, 255);
-        -moz-box-shadow:inset 0px 0px 0px 3px rgb(0, 128, 255);
-        box-shadow: inset 0px 0px 0px 3px rgb(0, 128, 255);
-    }
-
-    #l2:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(255, 102, 51);
-        -moz-box-shadow:inset 0px 0px 0px 3px rgb(255, 102, 51);
-        box-shadow: inset 0px 0px 0px 3px rgb(255, 102, 51);
-    }
-
-    #l3:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(51, 204, 51);
-        -moz-box-shadow:inset 0px 0px 0px 3px rgb(51, 204, 51);
-        box-shadow: inset 0px 0px 0px 3px rgb(51, 204, 51);
-    }
-
-    #l4:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(214, 41, 0);
-        -moz-box-shadow:inset 0px 0px 0px 3px rgb(214, 41, 0);
-        box-shadow: inset 0px 0px 0px 3px rgb(214, 41, 0);
-    }
-
-    #l5:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(153, 0, 153);
-        -moz-box-shadow:inset 0px 0px 0px 3px rgb(153, 0, 153);
-        box-shadow: inset 0px 0px 0px 3px rgb(153, 0, 153);
-    }
     
-    .inleft:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px blueviolet;
-        -moz-box-shadow:inset 0px 0px 0px 3px blueviolet;
-        box-shadow: inset 0px 0px 0px 3px blueviolet;
-    }
+    <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
+    <script type="text/javascript" src="script.js"></script>
 
-    .rightpane{
-        width: 50em;
-        height: 35em;
-        position: relative;
-        float: left;/**/
-        /*margin-left: 30em;*/
-        border-collapse: collapse;
-        margin-top: 10px;
-    }
-
-    .switch {
-        position: relative;
-        display: inline-block;
-        width: 40px;
-        height: 18px;
-    }
-
-    .switch input { 
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-
-    .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-
-    .slider:before {
-        position: absolute;
-        content: "";
-        height: 12px;
-        width: 18px;
-        left: 4px;
-        bottom: 3px;
-        background-color: white;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-
-    input:checked + .slider {
-       background-color: #2196F3;
-    }
-
-    input:focus + .slider {
-      box-shadow: 0 0 2px #2196F3;
-    }
-
-    input:checked + .slider:before {
-        -webkit-transform: translateX(13px);
-        -ms-transform: translateX(13px);
-        transform: translateX(13px);
-    }
-
-    .button {
-        background-color: #2196F3;
-        border: none;
-        color: white;
-        padding: 5px 5px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 13px;
-        margin: 2px 1px;
-        cursor: pointer;
-    }
-
-    input[type=number] {
-        text-align: center;
-        width: 10%;
-        padding: 4px 5px;
-        margin: 2px 0;
-        box-sizing: border-box;
-        border: 1.5px solid #ccc;
-        -webkit-transition: 0.3s;
-        transition: 0.3s;
-        outline: none;
-    }
-
-    input[type=number]:focus {
-        border: 3px solid #555;
-    }
-
-    input[type=number]::-webkit-inner-spin-button,
-    input[type=number]::-webkit-outer-spin-button { 
-        -webkit-appearance: none; 
-        margin: 0; 
-    }
-
-    .toggle {
-        position: relative;
-        display: inline-block;
-        width: 20px;
-        height: 18px;
-    }
-
-    .toggle input { 
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-
-    .toggler {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: white;
-        -webkit-transition: .2s;
-        transition: .2s;
-        border: 2px solid rgb(153, 151, 151);
-    }
-
-    input:checked + .toggler {
-       background-color: rgb(64, 161, 240);
-       border-color: rgb(83, 82, 82);
-    }
-
-</style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 <body>
     <div class="heading">
         Pick Weights Calibrator
